# lprog-hf-2021o-teperto-krem

./: CMakeLists.txt  README.md
libtepertokrem/: CMakeLists.txt  address.cpp  address.hpp  tepertokrem.hpp  types.hpp
libtepertokrem/application/: application.cpp  application.hpp  router.cpp  router.hpp
libtepertokrem/http/: fileserver.cpp  fileserver.hpp  handle.cpp  handle.hpp  header.cpp  header.hpp  http.cpp  http.hpp  request.cpp  request.hpp  responsewriter.cpp  responsewriter.hpp  status.hpp
libtepertokrem/stream/: stream.cpp  stream.hpp  stream2.cpp  stream2.hpp  tcpstream.cpp  tcpstream.hpp
libtepertokrem/utility/: fileloader.cpp  fileloader.hpp  named_type.hpp  url.cpp  url.hpp
tepertokrem/: main.cpp
web/: bevasarlolista.html  index.html  main.css  main.js
